add cancel and revert endpoints